--- a/login.html
+++ b/login.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="box">
-      <h1>This is my app</h1>
-      <h2>Login form</h2>
-    </div>
+    <h1>Login</h1>
   </body>
 </html>
